openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-api
  labels:
    app: welcome-api
spec:
  type: ClusterIP
  selector:
    app: welcome-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
